--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-sass --watch ./portfolio_66/scss:./portfolio_66/css
+sass --watch ./scss:./css
 
 git config --global user.email "211410666@o365.tku.edu.tw"
 git config --global user.name "211410666"
